Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntegerNumberField.quorum
class Main
    integer int
    action Main
        int = cast(integer, 7.5)
        if int = 7
            output "passed"
        end
    end
end