Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjNumber.quorum
class main
    action Main
        Boolean bool
        bool = cast(Boolean, 7.5)
    end
end